--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,32 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
             <classifier>jakarta</classifier>
         </dependency>
         
+        <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.4.4.Final</version>  <!-- o la versión disponible -->
+</dependency>
+
+<dependency>
+    <groupId>org.hibernate.common</groupId>
+    <artifactId>hibernate-commons-annotations</artifactId>
+    <version>6.0.6.Final</version>
+</dependency>
+
+<!-- DRIVER DE H2 (o el que utilices) -->
+<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>2.2.224</version>
+</dependency>
+
+        
+        
+        
+        
+        
+        
+        
         <!-- Servlet API -->
         <dependency>
             <groupId>jakarta.servlet</groupId>
